--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 
     <script src="script.js"></script>
+    <script src="./arrayfunctions.js"></script>
 </head>
 <body>
     
